[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/PixelTheme.tres" type="Theme" id=1]
[ext_resource path="res://MenuUI/LevelPicker.gd" type="Script" id=2]

[node name="LevelPicker" type="CanvasLayer"]

[node name="Levels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="Levels"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0705882, 0.0666667, 0.0666667, 0.670588 )

[node name="VBoxContainer" type="VBoxContainer" parent="Levels/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )

[node name="Label" type="Label" parent="Levels/Background/VBoxContainer"]
margin_right = 300.0
margin_bottom = 51.0
theme = ExtResource( 1 )
text = "Choose the level"
align = 1
valign = 1

[node name="LEVEL_1" type="Button" parent="Levels/Background/VBoxContainer"]
margin_top = 55.0
margin_right = 300.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../LEVEL_3")
focus_neighbour_bottom = NodePath("../LEVEL_2")
theme = ExtResource( 1 )
text = "Level 1"
icon_align = 1

[node name="LEVEL_2" type="Button" parent="Levels/Background/VBoxContainer"]
margin_top = 114.0
margin_right = 300.0
margin_bottom = 169.0
focus_neighbour_top = NodePath("../LEVEL_1")
focus_neighbour_bottom = NodePath("../LEVEL_3")
theme = ExtResource( 1 )
text = "Level 2"
icon_align = 1

[node name="LEVEL_3" type="Button" parent="Levels/Background/VBoxContainer"]
margin_top = 173.0
margin_right = 300.0
margin_bottom = 228.0
focus_neighbour_top = NodePath("../LEVEL_2")
focus_neighbour_bottom = NodePath("../LEVEL_1")
theme = ExtResource( 1 )
text = "Level 3"

[connection signal="pressed" from="Levels/Background/VBoxContainer/LEVEL_1" to="Levels" method="_on_LEVEL_1_pressed"]
[connection signal="pressed" from="Levels/Background/VBoxContainer/LEVEL_2" to="Levels" method="_on_LEVEL_2_pressed"]
[connection signal="pressed" from="Levels/Background/VBoxContainer/LEVEL_3" to="Levels" method="_on_LEVEL_3_pressed"]
